namespace SyncedHealth.Center.Platform.Subscription.Domain.Model.ValueObjects;

public enum ESubscriptionStatus
{
    Pending,
    Active,
    PastDue,
    Cancelled
}